--- a/.github/workflows/dockerbuild.yml
+++ b/.github/workflows/dockerbuild.yml
@@ -73,7 +73,7 @@ jobs:
       - name: 6. Verify Deployment
         run: |
           echo "Waiting for deployment to be ready..."
-          kubectl rollout status deployment/house-price  --timeout=120s 
+          kubectl rollout status deployment/house-price-deployment  --timeout=120s
           echo -e "\n--- Pod Status ---"
           kubectl get pods
           echo -e "\n--- Service Status ---"
