updated the dockerbuild.yaml

--- a/.github/workflows/dockerbuild.yml
+++ b/.github/workflows/dockerbuild.yml
@@ -78,3 +78,5 @@ jobs:
           kubectl get pods
           echo -e "\n--- Service Status ---"
           kubectl get service
+          echo -e "\n--- create tunnel"
+          minikube tunnel
